@@ -9,6 +9,8 @@ This uses outline mode in Emacs.  See C-h m [M-x describe-mode].
 
 * Changes in Dinotrace *****
 
+****	Fix File Reread with identically named signals.
+
 ****	Fix coredump on read and GCC 3.2.  [Jason Mancini]
 
 * Changes in Dinotrace 9.1i  03/07/2003
